# dataset-extractor-lotus

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml
about/: index.html
dataset_extractor_lotus/: main.py  zenodo_downloader.py
dataset_extractor_lotus/.ipynb_checkpoints/: main-checkpoint.py  testing-checkpoint.ipynb
docs/: about.md  index.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/search/: search_index.json
