[tool.poetry]
name = "dataset_extractor_lotus"
version = "0.0.1"
description = "Extract specific elements from the LOTUS dataset."
authors = ["Pascal Amrein <fpascal.amrein@unifr.ch>"]
repository = "https://github.com/fpgmaas/dataset-extractor-lotus"
documentation = "https://fpgmaas.github.io/dataset-extractor-lotus/"
readme = "README.md"
packages = [
  {include = "dataset_extractor_lotus"}
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
polars = "^0.20.13"
numpy = "^1.26.4"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
requests = "^2.31.0"
lxml = "^5.1.0"
bs4 = "^0.0.2"
chromedriver-autoinstaller = "^0.6.4"
selenium = "^4.18.1"
click = "^8.1.7"
inquirerpy = "^0.3.4"
pandas = "^2.2.1"
jupyter = "^1.0.0"
pymongo = "^4.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["dataset_extractor_lotus"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
